--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "packageManager": "yarn@4.7.0",
   "dependencies": {
     "parcel": "^2.13.3"
+  },
+  "scripts": {
+    "start": "parcel serve index.html"
   }
 }
